# calc_cli

./: CLAUDE.md  CMakeLists.txt  README.md  calc-cli-impl-plan.md
docs/: app-ui-specs.md  calc-cli-impl-plan.md  cli-and-spacing-plan.md  data-binding-patterns.md  exch-rate-extensions.md  formatting-util-plan.md  ftxui-event-flow.md  future-features-ideas.md  parser-extraction-plan.md  separation-of-concerns.md  sqlite-extensions.md
docs/planning/ideas/: future-refactoring-ideas.md
docs/planning/implementation/: exch-rate-extensions.md  formatting-util-plan.md  inline-history-plan.md  parser-extraction-plan.md  stdin-pipe-plan.md  test_main_split_plan.md
docs/planning/versions/: version101-planning.md  version102-planning.md  version103-planning.md
planning/: version101-planning.md  version102-planning.md  version103-planning.md
src/: app.cpp  app.hpp  calculator.cpp  calculator.hpp  main.cpp
src/controller/: app_controller.cpp  app_controller.hpp  exchange_rate_controller.cpp  exchange_rate_controller.hpp  history_controller.cpp  history_controller.hpp
src/model/: app_state.hpp  calculator.cpp  calculator.hpp  exchange_rate.cpp  exchange_rate.hpp  history_repository.cpp  history_repository.hpp  parser.cpp  parser.hpp
src/service/: calculator.cpp  calculator.hpp  parser.cpp  parser.hpp
src/util/: constants.hpp  formatting.cpp  formatting.hpp
src/view/: app.cpp  app.hpp  custom_exchange.cpp  custom_exchange.hpp
tests/: test_main.cpp
tests/controller/: test_app_controller.cpp  test_exchange_rate_controller.cpp  test_history_controller.cpp
tests/model/: test_calculator.cpp  test_exchange_rate.cpp  test_history_repository.cpp  test_parser.cpp
tests/util/: test_constants.cpp  test_formatting.cpp
tests/view/: test_app.cpp  test_custom_exchange.cpp
